edit ws messaging
