# backend-go/SessionService/models/CreateResponse.go
@@ -4,4 +4,5 @@ type SessionCreateResponse struct {
 	Jwt              string `json:"jwt"`
 	ServerWsEndpoint string `json:"serverWsEndpoint"`
 	SessionId        string `json:"sessionId"`
+	TempUserId       string `json:"tempUserId"`
 }
